# controllers/studentsController.js
@@ -1,73 +1,74 @@
 const mongodb = require("../data/database.js")
 const createObjectId = require('mongodb').ObjectId.createFromHexString;
+const {blogSchema} = require('../helpers/validation.js')
 
-const getstudent = async (req, res) => {
+const getstudents = async (req, res) => {
     //#swagger.tags=['Users']
     const userId = createObjectId(req.params.id);
-    const result = await mongodb.getDb().db("project2").collection('student').find({_id: userId});
+    const result = await mongodb.getDb().db("project2").collection('students').find({_id: userId});
     result.toArray().then((lists) => {
         res.setHeader('Content-Type', 'application/json');
         res.status(200).json(lists[0]);
     })
 }
 
-const getAllStudents = async (req, res) => {
+const getAllstudents = async (req, res) => {
     //#swagger.tags=['Users']
-    const result = await mongodb.getDb().db("project2").collection('student').find();
+    const result = await mongodb.getDb().db("project2").collection('students').find();
     result.toArray().then((lists) => {
         res.setHeader('Content-Type', 'application/json');
         res.status(200).json(lists);
     })
 }
 
-const createStudent = async (req, res) => {
+const createstudents = async (req, res) => {
     //#swagger.tags=['Users']
-    const student = {
+    const students = {
         firstName: req.body.firstName,
         lastName: req.body.lastName,
         email: req.body.email,
-        studentId: req.body.studentId,
+        studentsId: req.body.studentsId,
         birthday: req.body.birthday
     };
 
-    const response = await mongodb.getDb().db("project2").collection('student').insertOne(student);
+    const response = await mongodb.getDb().db("project2").collection('students').insertOne(students);
     if(response.acknowledged){
     res.status(200).json(response)
     }
     else{res.status(500).json(response.error || 'There has been an error')}
 }
 
-const updatestudent = async (req, res) => {
+const updatestudents = async (req, res) => {
     //#swagger.tags=['Users']
     const userId = createObjectId(req.params.id);
-    const student = {
+    const students = {
         firstName: req.body.firstName,
         lastName: req.body.lastName,
         email: req.body.email,
-        studentId: req.body.studentId,
+        studentsId: req.body.studentsId,
         birthday: req.body.birthday
     }
 
-    const response = await mongodb.getDb().db("project2").collection('student').replaceOne({_id: userId}, student);
+    const response = await mongodb.getDb().db("project2").collection('students').replaceOne({_id: userId}, students);
     if(response.acknowledged){
     res.status(200).json(response)
     }
     else{res.status(500).json(response.error || 'There has been an error')}
 }
 
-const deletestudent = async (req, res) => {
+const deletestudents = async (req, res) => {
     //#swagger.tags=['Users']
     const userId = createObjectId(req.params.id);
-    const response = await mongodb.getDb().db("project2").collection('student').deleteOne({_id: userId});
+    const response = await mongodb.getDb().db("project2").collection('students').deleteOne({_id: userId});
     if(response.acknowledged){
     res.status(200).json(response)
     }
     else{res.status(500).json(response.error || 'There has been an error')}
 }
 module.exports = {
-    getstudent,
+    getstudents,
     getAllstudents,
-    createstudent,
-    updatestudent,
-    deletestudent
+    createstudents,
+    updatestudents,
+    deletestudents
 }
