# routes/index.js
@@ -1,15 +1,15 @@
 const router = require('express').Router();
-const contacts = require('../controllers/studentsController')
+const students = require('../controllers/studentsController')
 
 router.get('/', (req, res) => { 
     //#swagger.tags=['Hello World']rs
     res.send('Hello World');});
 
-router.get('/contacts', contacts.getAllstudents);
-router.get('/contacts/:id', contacts.getstudent);
-router.post('/contacts', contacts.createstudent);
-router.put('/contacts/:id', contacts.updatestudent);
-router.delete('/contacts/:id', contacts.deletestudent);
+router.get('/students', students.getAllstudents);
+router.get('/students/:id', students.getstudents);
+router.post('/students', students.createstudents);
+router.put('/students/:id', students.updatestudents);
+router.delete('/students/:id', students.deletestudents);
 
 
 module.exports = router;
